--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <hf-app></hf-app>
+  <I-do-not-exist></I-do-not-exist>
 </body>
 </html>
